<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View
            android:id="@+id/view"
            android:layout_width="150dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/sheet_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/hundred"/>
        <TextView
            android:id="@+id/bottom_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/inter"
            android:text="@string/profile_complete"
            android:textColor="@color/text_color"
            android:textSize="22sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/congrats_your_profile_has_been_completed_successfully"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />


        <com.google.android.material.button.MaterialButton
            android:layout_width="280dp"
            android:id="@+id/ok"
            android:layout_height="65dp"
            app:cornerRadius="100dp"
            android:layout_marginTop="73dp"
            android:backgroundTint="@color/hrpgreen"
            android:text="@string/okay"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"

            />
    </LinearLayout>

</LinearLayout>
